--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "joi": "^14.0.1"
+    "joi": "^14.0.1",
+    "mongoose": "^5.3.7"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
