--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
+    "config": "^2.0.1",
     "express": "^4.16.4",
     "joi": "^14.0.1",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.7"
   },
   "devDependencies": {
